deploy/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8080
        path: /
